src/agefreighter/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ADD
    CONSTRAINT
    DO
    DROP
    ENDS
    FOR
    IS
    MINUS
    OF
    ON
    REQUIRE
    SCALAR
    STARTS
    UNIQUE

Grammar

Rule 0     S' -> query
Rule 1     query -> version_header query_part
Rule 2     query -> query_part
Rule 3     query -> query UNION query_part
Rule 4     query -> query UNION ALL query_part
Rule 5     version_header -> CYPHER NUMBER
Rule 6     query_part -> clause_list
Rule 7     clause -> match_clause
Rule 8     clause -> optional_match_clause
Rule 9     clause -> mandatory_match_clause
Rule 10    clause -> merge_clause
Rule 11    clause -> create_clause
Rule 12    clause -> with_clause
Rule 13    clause -> set_clause
Rule 14    clause -> delete_clause
Rule 15    clause -> detach_delete_clause
Rule 16    clause -> remove_clause
Rule 17    clause -> call_clause
Rule 18    clause -> return_clause
Rule 19    clause -> unwind_clause
Rule 20    clause -> order_clause
Rule 21    clause_list -> clause
Rule 22    clause_list -> clause_list clause
Rule 23    match_clause -> MATCH pattern_spec where_clause_opt
Rule 24    optional_match_clause -> OPTIONAL MATCH pattern_spec where_clause_opt
Rule 25    create_clause -> CREATE pattern_spec
Rule 26    return_clause -> RETURN return_items
Rule 27    return_clause -> RETURN DISTINCT return_items
Rule 28    return_items -> return_item
Rule 29    return_items -> return_items COMMA return_item
Rule 30    return_item -> expression
Rule 31    return_item -> expression AS IDENTIFIER
Rule 32    where_clause_opt -> <empty>
Rule 33    where_clause_opt -> WHERE expression
Rule 34    pattern -> node_pattern pattern_chain_opt
Rule 35    pattern_chain_opt -> <empty>
Rule 36    pattern_chain_opt -> pattern_chain_opt relationship_pattern node_pattern
Rule 37    pattern_list -> pattern
Rule 38    pattern_list -> pattern_list COMMA pattern
Rule 39    node_pattern -> LPAREN node_content_opt RPAREN
Rule 40    node_content_opt -> <empty>
Rule 41    node_content_opt -> node_content
Rule 42    node_content -> IDENTIFIER labels_opt property_map_opt
Rule 43    node_content -> property_map
Rule 44    node_content -> PARAM
Rule 45    node_content -> IDENTIFIER labels_opt PARAM
Rule 46    node_content -> COLON IDENTIFIER labels_opt property_map_opt
Rule 47    property_access -> IDENTIFIER DOT IDENTIFIER
Rule 48    labels_opt -> <empty>
Rule 49    labels_opt -> labels_opt COLON IDENTIFIER
Rule 50    property_map_opt -> <empty>
Rule 51    property_map_opt -> property_map
Rule 52    opt_relationship_type_list -> relationship_type_list
Rule 53    opt_relationship_type_list -> <empty>
Rule 54    property_map -> LBRACE property_list RBRACE
Rule 55    property_list -> property
Rule 56    property_list -> property_list COMMA property
Rule 57    pattern_spec -> pattern_alias
Rule 58    pattern_spec -> pattern_list
Rule 59    pattern_alias -> IDENTIFIER EQ pattern
Rule 60    property -> IDENTIFIER COLON expression
Rule 61    relationship_pattern -> DASH LBRACKET relationship_content RBRACKET ARROW
Rule 62    relationship_pattern -> DASH LBRACKET relationship_content RBRACKET DASH
Rule 63    relationship_pattern -> LT DASH LBRACKET relationship_content RBRACKET DASH
Rule 64    relationship_content -> opt_relationship_type_list relationship_length_opt property_map_opt
Rule 65    relationship_type_list -> relationship_base
Rule 66    relationship_type_list -> relationship_type_list PIPE relationship_base
Rule 67    relationship_base -> IDENTIFIER COLON reltype
Rule 68    relationship_base -> COLON reltype
Rule 69    relationship_base -> IDENTIFIER
Rule 70    relationship_base -> <empty>
Rule 71    relationship_length_opt -> STAR
Rule 72    relationship_length_opt -> STAR relationship_length_spec
Rule 73    relationship_length_opt -> <empty>
Rule 74    expression -> expression PERCENT expression
Rule 75    expression -> expression CARET expression
Rule 76    relationship_length_spec -> NUMBER
Rule 77    relationship_length_spec -> NUMBER DOT DOT NUMBER
Rule 78    relationship_length_spec -> NUMBER DOT DOT
Rule 79    expression -> expression EQ expression
Rule 80    expression -> expression PLUS expression
Rule 81    expression -> expression DASH expression
Rule 82    expression -> expression STAR expression
Rule 83    expression -> expression SLASH expression
Rule 84    expression -> expression LT expression
Rule 85    expression -> expression LE expression
Rule 86    expression -> expression GT expression
Rule 87    expression -> expression GE expression
Rule 88    expression -> LBRACKET list_items_opt RBRACKET
Rule 89    list_items_opt -> <empty>
Rule 90    list_items_opt -> list_items
Rule 91    list_items -> expression
Rule 92    list_items -> list_items COMMA expression
Rule 93    expression -> expression AND expression
Rule 94    expression -> expression OR expression
Rule 95    expression -> expression XOR expression
Rule 96    expression -> expression CONTAINS expression
Rule 97    expression -> expression ENDS_WITH expression
Rule 98    expression -> expression STARTS_WITH expression
Rule 99    expression -> expression IS_NOT_NULL
Rule 100   expression -> expression IS_NULL
Rule 101   expression -> expression DOT IDENTIFIER
Rule 102   expression -> DASH expression
Rule 103   expression -> LPAREN expression RPAREN
Rule 104   expression -> NUMBER
Rule 105   expression -> STRING
Rule 106   expression -> IDENTIFIER
Rule 107   expression -> expression LBRACKET expression RBRACKET
Rule 108   expression -> function_call
Rule 109   expression -> NULL
Rule 110   expression -> PARAM
Rule 111   function_call -> IDENTIFIER LPAREN arg_list RPAREN
Rule 112   arg_list -> <empty>
Rule 113   arg_list -> arguments
Rule 114   arguments -> expression
Rule 115   arguments -> arguments COMMA expression
Rule 116   expression -> error
Rule 117   with_clause -> WITH with_items
Rule 118   with_clause -> WITH with_items WHERE expression
Rule 119   with_items -> with_item
Rule 120   with_items -> with_items COMMA with_item
Rule 121   with_item -> expression
Rule 122   with_item -> expression AS IDENTIFIER
Rule 123   set_clause -> SET set_items
Rule 124   set_items -> set_item
Rule 125   set_items -> set_items COMMA set_item
Rule 126   set_item -> property_access EQ expression
Rule 127   set_item -> IDENTIFIER EQ expression
Rule 128   slice_spec -> expression DOT DOT expression
Rule 129   expression -> expression LBRACKET slice_spec RBRACKET
Rule 130   expression -> STAR
Rule 131   slice_spec -> expression DOT DOT
Rule 132   slice_spec -> DOT DOT expression
Rule 133   expression -> LBRACKET IDENTIFIER IN expression list_comprehension_tail_opt RBRACKET
Rule 134   list_comprehension_tail_opt -> where_clause_opt
Rule 135   list_comprehension_tail_opt -> where_clause_opt PIPE expression
Rule 136   list_comprehension_tail -> where_clause_opt PIPE expression
Rule 137   expression -> pattern
Rule 138   expression -> LBRACKET pattern where_clause_opt PIPE expression RBRACKET
Rule 139   expression -> IDENTIFIER COLON IDENTIFIER
Rule 140   expression -> LBRACE property_list RBRACE
Rule 141   expression -> LBRACE RBRACE
Rule 142   expression -> IDENTIFIER LBRACE projection_items RBRACE
Rule 143   projection_items -> projection_item
Rule 144   projection_items -> projection_items COMMA projection_item
Rule 145   projection_item -> DOT IDENTIFIER
Rule 146   projection_item -> IDENTIFIER COLON expression
Rule 147   projection_item -> IDENTIFIER
Rule 148   projection_item -> DOT STAR
Rule 149   expression -> TRUE
Rule 150   expression -> FALSE
Rule 151   unwind_clause -> UNWIND expression AS IDENTIFIER
Rule 152   order_clause -> ORDER BY order_items
Rule 153   order_items -> order_item
Rule 154   order_items -> order_items COMMA order_item
Rule 155   order_item -> expression
Rule 156   order_item -> expression ASC
Rule 157   order_item -> expression ASCENDING
Rule 158   order_item -> expression DESC
Rule 159   order_item -> expression DESCENDING
Rule 160   expression -> CASE case_operand_opt case_when_clauses case_else_opt END
Rule 161   expression -> expression IN expression
Rule 162   case_operand_opt -> <empty>
Rule 163   case_operand_opt -> expression
Rule 164   case_when_clause -> WHEN expression THEN expression
Rule 165   case_when_clauses -> case_when_clause
Rule 166   case_when_clauses -> case_when_clauses case_when_clause
Rule 167   case_else_opt -> <empty>
Rule 168   case_else_opt -> ELSE expression
Rule 169   clause -> SKIP expression
Rule 170   clause -> LIMIT expression
Rule 171   expression -> DISTINCT expression
Rule 172   reltype -> IDENTIFIER
Rule 173   reltype -> IN
Rule 174   mandatory_match_clause -> MANDATORY MATCH pattern_spec where_clause_opt
Rule 175   return_item -> STAR
Rule 176   merge_clause -> MERGE pattern_spec
Rule 177   expression -> NOT expression
Rule 178   function_call -> EXISTS LPAREN arg_list RPAREN
Rule 179   delete_clause -> DELETE delete_items
Rule 180   delete_clause -> DETACH DELETE delete_items
Rule 181   delete_items -> expression
Rule 182   delete_items -> delete_items COMMA expression
Rule 183   detach_delete_clause -> DETACH DELETE delete_items
Rule 184   set_item -> IDENTIFIER PLUS_EQ expression
Rule 185   set_item -> property_access PLUS_EQ expression
Rule 186   set_item -> IDENTIFIER COLON IDENTIFIER
Rule 187   set_item -> IDENTIFIER label_list
Rule 188   label_list -> COLON IDENTIFIER
Rule 189   label_list -> label_list COLON IDENTIFIER
Rule 190   remove_clause -> REMOVE remove_items
Rule 191   remove_items -> remove_item
Rule 192   remove_items -> remove_items COMMA remove_item
Rule 193   remove_item -> property_access
Rule 194   remove_item -> IDENTIFIER label_list
Rule 195   call_clause -> CALL procedure_call yield_clause_opt call_where_clause_opt
Rule 196   procedure_call -> IDENTIFIER LPAREN arg_list RPAREN
Rule 197   procedure_call -> IDENTIFIER
Rule 198   procedure_call -> procedure_call DOT IDENTIFIER
Rule 199   procedure_call -> procedure_call LPAREN arg_list RPAREN
Rule 200   yield_clause -> YIELD yield_items
Rule 201   yield_items -> yield_item
Rule 202   yield_items -> yield_items COMMA yield_item
Rule 203   yield_item -> IDENTIFIER
Rule 204   yield_item -> IDENTIFIER AS IDENTIFIER
Rule 205   yield_clause_opt -> <empty>
Rule 206   yield_clause_opt -> yield_clause
Rule 207   call_where_clause_opt -> <empty>
Rule 208   call_where_clause_opt -> WHERE expression

Terminals, with rules where they appear

ADD                  : 
ALL                  : 4
AND                  : 93
ARROW                : 61
AS                   : 31 122 151 204
ASC                  : 156
ASCENDING            : 157
BY                   : 152
CALL                 : 195
CARET                : 75
CASE                 : 160
COLON                : 46 49 60 67 68 139 146 186 188 189
COMMA                : 29 38 56 92 115 120 125 144 154 182 192 202
CONSTRAINT           : 
CONTAINS             : 96
CREATE               : 25
CYPHER               : 5
DASH                 : 61 62 62 63 63 81 102
DELETE               : 179 180 183
DESC                 : 158
DESCENDING           : 159
DETACH               : 180 183
DISTINCT             : 27 171
DO                   : 
DOT                  : 47 77 77 78 78 101 128 128 131 131 132 132 145 148 198
DROP                 : 
ELSE                 : 168
END                  : 160
ENDS                 : 
ENDS_WITH            : 97
EQ                   : 59 79 126 127
EXISTS               : 178
FALSE                : 150
FOR                  : 
GE                   : 87
GT                   : 86
IDENTIFIER           : 31 42 45 46 47 47 49 59 60 67 69 101 106 111 122 127 133 139 139 142 145 146 147 151 172 184 186 186 187 188 189 194 196 197 198 203 204 204
IN                   : 133 161 173
IS                   : 
IS_NOT_NULL          : 99
IS_NULL              : 100
LBRACE               : 54 140 141 142
LBRACKET             : 61 62 63 88 107 129 133 138
LE                   : 85
LIMIT                : 170
LPAREN               : 39 103 111 178 196 199
LT                   : 63 84
MANDATORY            : 174
MATCH                : 23 24 174
MERGE                : 176
MINUS                : 
NOT                  : 177
NULL                 : 109
NUMBER               : 5 76 77 77 78 104
OF                   : 
ON                   : 
OPTIONAL             : 24
OR                   : 94
ORDER                : 152
PARAM                : 44 45 110
PERCENT              : 74
PIPE                 : 66 135 136 138
PLUS                 : 80
PLUS_EQ              : 184 185
RBRACE               : 54 140 141 142
RBRACKET             : 61 62 63 88 107 129 133 138
REMOVE               : 190
REQUIRE              : 
RETURN               : 26 27
RPAREN               : 39 103 111 178 196 199
SCALAR               : 
SET                  : 123
SKIP                 : 169
SLASH                : 83
STAR                 : 71 72 82 130 148 175
STARTS               : 
STARTS_WITH          : 98
STRING               : 105
THEN                 : 164
TRUE                 : 149
UNION                : 3 4
UNIQUE               : 
UNWIND               : 151
WHEN                 : 164
WHERE                : 33 118 208
WITH                 : 117 118
XOR                  : 95
YIELD                : 200
error                : 116

Nonterminals, with rules where they appear

arg_list             : 111 178 196 199
arguments            : 113 115
call_clause          : 17
call_where_clause_opt : 195
case_else_opt        : 160
case_operand_opt     : 160
case_when_clause     : 165 166
case_when_clauses    : 160 166
clause               : 21 22
clause_list          : 6 22
create_clause        : 11
delete_clause        : 14
delete_items         : 179 180 182 183
detach_delete_clause : 15
expression           : 30 31 33 60 74 74 75 75 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 91 92 93 93 94 94 95 95 96 96 97 97 98 98 99 100 101 102 103 107 107 114 115 118 121 122 126 127 128 128 129 131 132 133 135 136 138 146 151 155 156 157 158 159 161 161 163 164 164 168 169 170 171 177 181 182 184 185 208
function_call        : 108
label_list           : 187 189 194
labels_opt           : 42 45 46 49
list_comprehension_tail : 
list_comprehension_tail_opt : 133
list_items           : 90 92
list_items_opt       : 88
mandatory_match_clause : 9
match_clause         : 7
merge_clause         : 10
node_content         : 41
node_content_opt     : 39
node_pattern         : 34 36
opt_relationship_type_list : 64
optional_match_clause : 8
order_clause         : 20
order_item           : 153 154
order_items          : 152 154
pattern              : 37 38 59 137 138
pattern_alias        : 57
pattern_chain_opt    : 34 36
pattern_list         : 38 58
pattern_spec         : 23 24 25 174 176
procedure_call       : 195 198 199
projection_item      : 143 144
projection_items     : 142 144
property             : 55 56
property_access      : 126 185 193
property_list        : 54 56 140
property_map         : 43 51
property_map_opt     : 42 46 64
query                : 3 4 0
query_part           : 1 2 3 4
relationship_base    : 65 66
relationship_content : 61 62 63
relationship_length_opt : 64
relationship_length_spec : 72
relationship_pattern : 36
relationship_type_list : 52 66
reltype              : 67 68
remove_clause        : 16
remove_item          : 191 192
remove_items         : 190 192
return_clause        : 18
return_item          : 28 29
return_items         : 26 27 29
set_clause           : 13
set_item             : 124 125
set_items            : 123 125
slice_spec           : 129
unwind_clause        : 19
version_header       : 1
where_clause_opt     : 23 24 134 135 136 138 174
with_clause          : 12
with_item            : 119 120
with_items           : 117 118 120
yield_clause         : 206
yield_clause_opt     : 195
yield_item           : 201 202
yield_items          : 200 202

Parsing method: LALR

state 0

    (0) S' -> . query
    (1) query -> . version_header query_part
    (2) query -> . query_part
    (3) query -> . query UNION query_part
    (4) query -> . query UNION ALL query_part
    (5) version_header -> . CYPHER NUMBER
    (6) query_part -> . clause_list
    (21) clause_list -> . clause
    (22) clause_list -> . clause_list clause
    (7) clause -> . match_clause
    (8) clause -> . optional_match_clause
    (9) clause -> . mandatory_match_clause
    (10) clause -> . merge_clause
    (11) clause -> . create_clause
    (12) clause -> . with_clause
    (13) clause -> . set_clause
    (14) clause -> . delete_clause
    (15) clause -> . detach_delete_clause
    (16) clause -> . remove_clause
    (17) clause -> . call_clause
    (18) clause -> . return_clause
    (19) clause -> . unwind_clause
    (20) clause -> . order_clause
    (169) clause -> . SKIP expression
    (170) clause -> . LIMIT expression
    (23) match_clause -> . MATCH pattern_spec where_clause_opt
    (24) optional_match_clause -> . OPTIONAL MATCH pattern_spec where_clause_opt
    (174) mandatory_match_clause -> . MANDATORY MATCH pattern_spec where_clause_opt
    (176) merge_clause -> . MERGE pattern_spec
    (25) create_clause -> . CREATE pattern_spec
    (117) with_clause -> . WITH with_items
    (118) with_clause -> . WITH with_items WHERE expression
    (123) set_clause -> . SET set_items
    (179) delete_clause -> . DELETE delete_items
    (180) delete_clause -> . DETACH DELETE delete_items
    (183) detach_delete_clause -> . DETACH DELETE delete_items
    (190) remove_clause -> . REMOVE remove_items
    (195) call_clause -> . CALL procedure_call yield_clause_opt call_where_clause_opt
    (26) return_clause -> . RETURN return_items
    (27) return_clause -> . RETURN DISTINCT return_items
    (151) unwind_clause -> . UNWIND expression AS IDENTIFIER
    (152) order_clause -> . ORDER BY order_items

    CYPHER          shift and go to state 4
    SKIP            shift and go to state 21
    LIMIT           shift and go to state 22
    MATCH           shift and go to state 23
    OPTIONAL        shift and go to state 24
    MANDATORY       shift and go to state 25
    MERGE           shift and go to state 26
    CREATE          shift and go to state 27
    WITH            shift and go to state 28
    SET             shift and go to state 29
    DELETE          shift and go to state 30
    DETACH          shift and go to state 31
    REMOVE          shift and go to state 32
    CALL            shift and go to state 33
    RETURN          shift and go to state 34
    UNWIND          shift and go to state 35
    ORDER           shift and go to state 36

    query                          shift and go to state 1
    version_header                 shift and go to state 2
    query_part                     shift and go to state 3
    clause_list                    shift and go to state 5
    clause                         shift and go to state 6
    match_clause                   shift and go to state 7
    optional_match_clause          shift and go to state 8
    mandatory_match_clause         shift and go to state 9
    merge_clause                   shift and go to state 10
    create_clause                  shift and go to state 11
    with_clause                    shift and go to state 12
    set_clause                     shift and go to state 13
    delete_clause                  shift and go to state 14
    detach_delete_clause           shift and go to state 15
    remove_clause                  shift and go to state 16
    call_clause                    shift and go to state 17
    return_clause                  shift and go to state 18
    unwind_clause                  shift and go to state 19
    order_clause                   shift and go to state 20

state 1

    (0) S' -> query .
    (3) query -> query . UNION query_part
    (4) query -> query . UNION ALL query_part

    UNION           shift and go to state 37


state 2

    (1) query -> version_header . query_part
    (6) query_part -> . clause_list
    (21) clause_list -> . clause
    (22) clause_list -> . clause_list clause
    (7) clause -> . match_clause
    (8) clause -> . optional_match_clause
    (9) clause -> . mandatory_match_clause
    (10) clause -> . merge_clause
    (11) clause -> . create_clause
    (12) clause -> . with_clause
    (13) clause -> . set_clause
    (14) clause -> . delete_clause
    (15) clause -> . detach_delete_clause
    (16) clause -> . remove_clause
    (17) clause -> . call_clause
    (18) clause -> . return_clause
    (19) clause -> . unwind_clause
    (20) clause -> . order_clause
    (169) clause -> . SKIP expression
    (170) clause -> . LIMIT expression
    (23) match_clause -> . MATCH pattern_spec where_clause_opt
    (24) optional_match_clause -> . OPTIONAL MATCH pattern_spec where_clause_opt
    (174) mandatory_match_clause -> . MANDATORY MATCH pattern_spec where_clause_opt
    (176) merge_clause -> . MERGE pattern_spec
    (25) create_clause -> . CREATE pattern_spec
    (117) with_clause -> . WITH with_items
    (118) with_clause -> . WITH with_items WHERE expression
    (123) set_clause -> . SET set_items
    (179) delete_clause -> . DELETE delete_items
    (180) delete_clause -> . DETACH DELETE delete_items
    (183) detach_delete_clause -> . DETACH DELETE delete_items
    (190) remove_clause -> . REMOVE remove_items
    (195) call_clause -> . CALL procedure_call yield_clause_opt call_where_clause_opt
    (26) return_clause -> . RETURN return_items
    (27) return_clause -> . RETURN DISTINCT return_items
    (151) unwind_clause -> . UNWIND expression AS IDENTIFIER
    (152) order_clause -> . ORDER BY order_items

    SKIP            shift and go to state 21
    LIMIT           shift and go to state 22
    MATCH           shift and go to state 23
    OPTIONAL        shift and go to state 24
    MANDATORY       shift and go to state 25
    MERGE           shift and go to state 26
    CREATE          shift and go to state 27
    WITH            shift and go to state 28
    SET             shift and go to state 29
    DELETE          shift and go to state 30
    DETACH          shift and go to state 31
    REMOVE          shift and go to state 32
    CALL            shift and go to state 33
    RETURN          shift and go to state 34
    UNWIND          shift and go to state 35
    ORDER           shift and go to state 36

    query_part                     shift and go to state 38
    clause_list                    shift and go to state 5
    clause                         shift and go to state 6
    match_clause                   shift and go to state 7
    optional_match_clause          shift and go to state 8
    mandatory_match_clause         shift and go to state 9
    merge_clause                   shift and go to state 10
    create_clause                  shift and go to state 11
    with_clause                    shift and go to state 12
    set_clause                     shift and go to state 13
    delete_clause                  shift and go to state 14
    detach_delete_clause           shift and go to state 15
    remove_clause                  shift and go to state 16
    call_clause                    shift and go to state 17
    return_clause                  shift and go to state 18
    unwind_clause                  shift and go to state 19
    order_clause                   shift and go to state 20

state 3

    (2) query -> query_part .

    UNION           reduce using rule 2 (query -> query_part .)
    $end            reduce using rule 2 (query -> query_part .)


state 4

    (5) version_header -> CYPHER . NUMBER

    NUMBER          shift and go to state 39


state 5

    (6) query_part -> clause_list .
    (22) clause_list -> clause_list . clause
    (7) clause -> . match_clause
    (8) clause -> . optional_match_clause
    (9) clause -> . mandatory_match_clause
    (10) clause -> . merge_clause
    (11) clause -> . create_clause
    (12) clause -> . with_clause
    (13) clause -> . set_clause
    (14) clause -> . delete_clause
    (15) clause -> . detach_delete_clause
    (16) clause -> . remove_clause
    (17) clause -> . call_clause
    (18) clause -> . return_clause
    (19) clause -> . unwind_clause
    (20) clause -> . order_clause
    (169) clause -> . SKIP expression
    (170) clause -> . LIMIT expression
    (23) match_clause -> . MATCH pattern_spec where_clause_opt
    (24) optional_match_clause -> . OPTIONAL MATCH pattern_spec where_clause_opt
    (174) mandatory_match_clause -> . MANDATORY MATCH pattern_spec where_clause_opt
    (176) merge_clause -> . MERGE pattern_spec
    (25) create_clause -> . CREATE pattern_spec
    (117) with_clause -> . WITH with_items
    (118) with_clause -> . WITH with_items WHERE expression
    (123) set_clause -> . SET set_items
    (179) delete_clause -> . DELETE delete_items
    (180) delete_clause -> . DETACH DELETE delete_items
    (183) detach_delete_clause -> . DETACH DELETE delete_items
    (190) remove_clause -> . REMOVE remove_items
    (195) call_clause -> . CALL procedure_call yield_clause_opt call_where_clause_opt
    (26) return_clause -> . RETURN return_items
    (27) return_clause -> . RETURN DISTINCT return_items
    (151) unwind_clause -> . UNWIND expression AS IDENTIFIER
    (152) order_clause -> . ORDER BY order_items

    UNION           reduce using rule 6 (query_part -> clause_list .)
    $end            reduce using rule 6 (query_part -> clause_list .)
    SKIP            shift and go to state 21
    LIMIT           shift and go to state 22
    MATCH           shift and go to state 23
    OPTIONAL        shift and go to state 24
    MANDATORY       shift and go to state 25
    MERGE           shift and go to state 26
    CREATE          shift and go to state 27
    WITH            shift and go to state 28
    SET             shift and go to state 29
    DELETE          shift and go to state 30
    DETACH          shift and go to state 31
    REMOVE          shift and go to state 32
    CALL            shift and go to state 33
    RETURN          shift and go to state 34
    UNWIND          shift and go to state 35
    ORDER           shift and go to state 36

    clause                         shift and go to state 40
    match_clause                   shift and go to state 7
    optional_match_clause          shift and go to state 8
    mandatory_match_clause         shift and go to state 9
    merge_clause                   shift and go to state 10
    create_clause                  shift and go to state 11
    with_clause                    shift and go to state 12
    set_clause                     shift and go to state 13
    delete_clause                  shift and go to state 14
    detach_delete_clause           shift and go to state 15
    remove_clause                  shift and go to state 16
    call_clause                    shift and go to state 17
    return_clause                  shift and go to state 18
    unwind_clause                  shift and go to state 19
    order_clause                   shift and go to state 20

state 6

    (21) clause_list -> clause .

    SKIP            reduce using rule 21 (clause_list -> clause .)
    LIMIT           reduce using rule 21 (clause_list -> clause .)
    MATCH           reduce using rule 21 (clause_list -> clause .)
    OPTIONAL        reduce using rule 21 (clause_list -> clause .)
    MANDATORY       reduce using rule 21 (clause_list -> clause .)
    MERGE           reduce using rule 21 (clause_list -> clause .)
    CREATE          reduce using rule 21 (clause_list -> clause .)
    WITH            reduce using rule 21 (clause_list -> clause .)
    SET             reduce using rule 21 (clause_list -> clause .)
    DELETE          reduce using rule 21 (clause_list -> clause .)
    DETACH          reduce using rule 21 (clause_list -> clause .)
    REMOVE          reduce using rule 21 (clause_list -> clause .)
    CALL            reduce using rule 21 (clause_list -> clause .)
    RETURN          reduce using rule 21 (clause_list -> clause .)
    UNWIND          reduce using rule 21 (clause_list -> clause .)
    ORDER           reduce using rule 21 (clause_list -> clause .)
    UNION           reduce using rule 21 (clause_list -> clause .)
    $end            reduce using rule 21 (clause_list -> clause .)


state 7

    (7) clause -> match_clause .

    SKIP            reduce using rule 7 (clause -> match_clause .)
    LIMIT           reduce using rule 7 (clause -> match_clause .)
    MATCH           reduce using rule 7 (clause -> match_clause .)
    OPTIONAL        reduce using rule 7 (clause -> match_clause .)
    MANDATORY       reduce using rule 7 (clause -> match_clause .)
    MERGE           reduce using rule 7 (clause -> match_clause .)
    CREATE          reduce using rule 7 (clause -> match_clause .)
    WITH            reduce using rule 7 (clause -> match_clause .)
    SET             reduce using rule 7 (clause -> match_clause .)
    DELETE          reduce using rule 7 (clause -> match_clause .)
    DETACH          reduce using rule 7 (clause -> match_clause .)
    REMOVE          reduce using rule 7 (clause -> match_clause .)
    CALL            reduce using rule 7 (clause -> match_clause .)
    RETURN          reduce using rule 7 (clause -> match_clause .)
    UNWIND          reduce using rule 7 (clause -> match_clause .)
    ORDER           reduce using rule 7 (clause -> match_clause .)
    UNION           reduce using rule 7 (clause -> match_clause .)
    $end            reduce using rule 7 (clause -> match_clause .)


state 8

    (8) clause -> optional_match_clause .

    SKIP            reduce using rule 8 (clause -> optional_match_clause .)
    LIMIT           reduce using rule 8 (clause -> optional_match_clause .)
    MATCH           reduce using rule 8 (clause -> optional_match_clause .)
    OPTIONAL        reduce using rule 8 (clause -> optional_match_clause .)
    MANDATORY       reduce using rule 8 (clause -> optional_match_clause .)
    MERGE           reduce using rule 8 (clause -> optional_match_clause .)
    CREATE          reduce using rule 8 (clause -> optional_match_clause .)
    WITH            reduce using rule 8 (clause -> optional_match_clause .)
    SET             reduce using rule 8 (clause -> optional_match_clause .)
    DELETE          reduce using rule 8 (clause -> optional_match_clause .)
    DETACH          reduce using rule 8 (clause -> optional_match_clause .)
    REMOVE          reduce using rule 8 (clause -> optional_match_clause .)
    CALL            reduce using rule 8 (clause -> optional_match_clause .)
    RETURN          reduce using rule 8 (clause -> optional_match_clause .)
    UNWIND          reduce using rule 8 (clause -> optional_match_clause .)
    ORDER           reduce using rule 8 (clause -> optional_match_clause .)
    UNION           reduce using rule 8 (clause -> optional_match_clause .)
    $end            reduce using rule 8 (clause -> optional_match_clause .)


state 9

    (9) clause -> mandatory_match_clause .

    SKIP            reduce using rule 9 (clause -> mandatory_match_clause .)
    LIMIT           reduce using rule 9 (clause -> mandatory_match_clause .)
    MATCH           reduce using rule 9 (clause -> mandatory_match_clause .)
    OPTIONAL        reduce using rule 9 (clause -> mandatory_match_clause .)
    MANDATORY       reduce using rule 9 (clause -> mandatory_match_clause .)
    MERGE           reduce using rule 9 (clause -> mandatory_match_clause .)
    CREATE          reduce using rule 9 (clause -> mandatory_match_clause .)
    WITH            reduce using rule 9 (clause -> mandatory_match_clause .)
    SET             reduce using rule 9 (clause -> mandatory_match_clause .)
    DELETE          reduce using rule 9 (clause -> mandatory_match_clause .)
    DETACH          reduce using rule 9 (clause -> mandatory_match_clause .)
    REMOVE          reduce using rule 9 (clause -> mandatory_match_clause .)
    CALL            reduce using rule 9 (clause -> mandatory_match_clause .)
    RETURN          reduce using rule 9 (clause -> mandatory_match_clause .)
    UNWIND          reduce using rule 9 (clause -> mandatory_match_clause .)
    ORDER           reduce using rule 9 (clause -> mandatory_match_clause .)
    UNION           reduce using rule 9 (clause -> mandatory_match_clause .)
    $end            reduce using rule 9 (clause -> mandatory_match_clause .)


state 10

    (10) clause -> merge_clause .

    SKIP            reduce using rule 10 (clause -> merge_clause .)
    LIMIT           reduce using rule 10 (clause -> merge_clause .)
    MATCH           reduce using rule 10 (clause -> merge_clause .)
    OPTIONAL        reduce using rule 10 (clause -> merge_clause .)
    MANDATORY       reduce using rule 10 (clause -> merge_clause .)
    MERGE           reduce using rule 10 (clause -> merge_clause .)
    CREATE          reduce using rule 10 (clause -> merge_clause .)
    WITH            reduce using rule 10 (clause -> merge_clause .)
    SET             reduce using rule 10 (clause -> merge_clause .)
    DELETE          reduce using rule 10 (clause -> merge_clause .)
    DETACH          reduce using rule 10 (clause -> merge_clause .)
    REMOVE          reduce using rule 10 (clause -> merge_clause .)
    CALL            reduce using rule 10 (clause -> merge_clause .)
    RETURN          reduce using rule 10 (clause -> merge_clause .)
    UNWIND          reduce using rule 10 (clause -> merge_clause .)
    ORDER           reduce using rule 10 (clause -> merge_clause .)
    UNION           reduce using rule 10 (clause -> merge_clause .)
    $end            reduce using rule 10 (clause -> merge_clause .)


state 11

    (11) clause -> create_clause .

    SKIP            reduce using rule 11 (clause -> create_clause .)
    LIMIT           reduce using rule 11 (clause -> create_clause .)
    MATCH           reduce using rule 11 (clause -> create_clause .)
    OPTIONAL        reduce using rule 11 (clause -> create_clause .)
    MANDATORY       reduce using rule 11 (clause -> create_clause .)
    MERGE           reduce using rule 11 (clause -> create_clause .)
    CREATE          reduce using rule 11 (clause -> create_clause .)
    WITH            reduce using rule 11 (clause -> create_clause .)
    SET             reduce using rule 11 (clause -> create_clause .)
    DELETE          reduce using rule 11 (clause -> create_clause .)
    DETACH          reduce using rule 11 (clause -> create_clause .)
    REMOVE          reduce using rule 11 (clause -> create_clause .)
    CALL            reduce using rule 11 (clause -> create_clause .)
    RETURN          reduce using rule 11 (clause -> create_clause .)
    UNWIND          reduce using rule 11 (clause -> create_clause .)
    ORDER           reduce using rule 11 (clause -> create_clause .)
    UNION           reduce using rule 11 (clause -> create_clause .)
    $end            reduce using rule 11 (clause -> create_clause .)


state 12

    (12) clause -> with_clause .
